codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_display_shortcuts.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 56)"
---
                                                        
  Select a worktree                                     
                                                        
› 1. Refresh worktrees (⌥ + r)                          
  2. Worktrees settings… (⌥ + s)                        
  3. Worktree doctor (⌥ + d)                            
                                                        
  Press enter to confirm or esc to go back
